Added EmailScrape file

--- a/EmailScrapeTest.ipynb
+++ b/EmailScrapeTest.ipynb
@@ -193,7 +193,8 @@
     "        imgkit.from_file(\"GFG-1.html\", 'out.jpg')\n",
     "        image = Image.open(\"out.jpg\")\n",
     "        w, h = image.size\n",
-    "        image = image.crop((200, 0, w - 150, h))\n",
+    "        image = image.crop((0, 0, w, h))\n",
+    "        image = image.resize((w + 350, h + 450))\n",
     "        image.save(\"out.jpg\")\n",
     "        display(image)\n",
     "        p.image(\"out.jpg\")\n",
@@ -241,6 +242,255 @@
     "    print_receipts(service)\n",
     "    time.sleep(3)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RefreshError",
+     "evalue": "('invalid_grant: Bad Request', {'error': 'invalid_grant', 'error_description': 'Bad Request'})",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRefreshError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9d2398bf2db3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m \u001b[0mservice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_service\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-9d2398bf2db3>\u001b[0m in \u001b[0;36mget_service\u001b[0;34m()\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcreds\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcreds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcreds\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcreds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpired\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcreds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrefresh_token\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m             \u001b[0mcreds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrefresh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m             flow = InstalledAppFlow.from_client_secrets_file(\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/google/oauth2/credentials.py\u001b[0m in \u001b[0;36mrefresh\u001b[0;34m(self, request)\u001b[0m\n\u001b[1;32m    300\u001b[0m             \u001b[0mgrant_response\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    301\u001b[0m             \u001b[0mrapt_token\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 302\u001b[0;31m         \u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreauth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrefresh_grant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    303\u001b[0m             \u001b[0mrequest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_token_uri\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/google/oauth2/reauth.py\u001b[0m in \u001b[0;36mrefresh_grant\u001b[0;34m(request, token_uri, refresh_token, client_id, client_secret, scopes, rapt_token, enable_reauth_refresh)\u001b[0m\n\u001b[1;32m    345\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresponse_status_ok\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m         \u001b[0m_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle_error_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    348\u001b[0m     return _client._handle_refresh_grant_response(response_data, refresh_token) + (\n\u001b[1;32m    349\u001b[0m         \u001b[0mrapt_token\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/google/oauth2/_client.py\u001b[0m in \u001b[0;36m_handle_error_response\u001b[0;34m(response_data)\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0merror_details\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRefreshError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_details\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRefreshError\u001b[0m: ('invalid_grant: Bad Request', {'error': 'invalid_grant', 'error_description': 'Bad Request'})"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "\n",
+    "import os.path\n",
+    "import quopri\n",
+    "from io import BytesIO\n",
+    "from google.auth.transport.requests import Request\n",
+    "from google.oauth2.credentials import Credentials\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from googleapiclient.discovery import build\n",
+    "from googleapiclient.errors import HttpError\n",
+    "from apiclient import errors\n",
+    "import email\n",
+    "import base64\n",
+    "from IPython.display import display, HTML\n",
+    "from escpos.printer import Usb\n",
+    "import escpos.image as img\n",
+    "import usb.core\n",
+    "import imgkit\n",
+    "from PIL import Image\n",
+    "import time\n",
+    "\n",
+    "p = Usb(0x04b8, 0x0202)\n",
+    "\n",
+    "# If modifying these scopes, delete the file token.json.\n",
+    "SCOPES = ['https://www.googleapis.com/auth/gmail.readonly', 'https://www.googleapis.com/auth/gmail.modify']\n",
+    "\n",
+    "\n",
+    "\n",
+    "def unstar_message(service, msg_id):\n",
+    "    user_id = 'me'\n",
+    "\n",
+    "    service.users().messages().modify(userId= user_id, id=msg_id, body= {'removeLabelIds': [\"STARRED\"]}).execute()\n",
+    "\n",
+    "    try:\n",
+    "        service.users().messages().modify(userId= user_id, id=msg_id, body= {'removeLabelIds': [\"STARRED\"]}).execute()\n",
+    "        print(\"Pass\")\n",
+    "    except:\n",
+    "        print(\"Error\")\n",
+    "\n",
+    "def get_message(service, msg_id):\n",
+    "    \"\"\"\n",
+    "    Search the inbox for specific message by ID and return it back as a \n",
+    "    clean string. String may contain Python escape characters for newline\n",
+    "    and return line. \n",
+    "    \n",
+    "    PARAMS\n",
+    "        service: the google api service object already instantiated\n",
+    "        user_id: user id for google api service ('me' works here if\n",
+    "        already authenticated)\n",
+    "        msg_id: the unique id of the email you need\n",
+    "    RETURNS\n",
+    "        A string of encoded text containing the message body\n",
+    "    \"\"\"\n",
+    "\n",
+    "    user_id = 'me'\n",
+    "    #service = get_service()\n",
+    "\n",
+    "    try:\n",
+    "        # grab the message instance\n",
+    "        message = service.users().messages().get(userId=user_id, id=msg_id,format='raw').execute()\n",
+    "\n",
+    "        # decode the raw string, ASCII works pretty well here\n",
+    "        msg_str = base64.urlsafe_b64decode(message['raw'].encode('ASCII'))\n",
+    "\n",
+    "        # grab the string from the byte object\n",
+    "        mime_msg = email.message_from_bytes(msg_str)\n",
+    "\n",
+    "        # check if the content is multipart (it usually is)\n",
+    "        content_type = mime_msg.get_content_maintype()\n",
+    "        if content_type == 'multipart':\n",
+    "            # there will usually be 2 parts the first will be the body in text\n",
+    "            # the second will be the text in html\n",
+    "            parts = mime_msg.get_payload()\n",
+    "\n",
+    "            # return the encoded text\n",
+    "            final_content = parts[1].get_payload()\n",
+    "            return final_content\n",
+    "\n",
+    "        elif content_type == 'text':\n",
+    "            return mime_msg.get_payload()\n",
+    "\n",
+    "        else:\n",
+    "            return \"\"\n",
+    "            print(\"\\nMessage is not text or multipart, returned an empty string\")\n",
+    "    # unsure why the usual exception doesn't work in this case, but \n",
+    "    # having a standard Exception seems to do the trick\n",
+    "    except Exception:\n",
+    "        print(\"An error occured: \")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def search_message(service):\n",
+    "    \"\"\"\n",
+    "    Search the inbox for emails using standard gmail search parameters\n",
+    "    and return a list of email IDs for each result\n",
+    "    PARAMS:\n",
+    "        service: the google api service object already instantiated\n",
+    "        user_id: user id for google api service ('me' works here if\n",
+    "        already authenticated)\n",
+    "        search_string: search operators you can use with Gmail\n",
+    "        (see https://support.google.com/mail/answer/7190?hl=en for a list)\n",
+    "    RETURNS:\n",
+    "        List containing email IDs of search query\n",
+    "    \"\"\"\n",
+    "    user_id = 'me'\n",
+    "    search_string = 'Venmo'\n",
+    "\n",
+    "    try:\n",
+    "        # initiate the list for returning\n",
+    "        list_ids = []\n",
+    "\n",
+    "        # get the id of all messages that are in the search string\n",
+    "        search_ids = service.users().messages().list(userId=user_id, q='is:starred').execute()\n",
+    "        \n",
+    "        # if there were no results, print warning and return empty string\n",
+    "        try:\n",
+    "            ids = search_ids['messages']\n",
+    "\n",
+    "        except KeyError:\n",
+    "            print(\"WARNING: the search queried returned 0 results\")\n",
+    "            print(\"returning an empty string\")\n",
+    "            return \"\"\n",
+    "\n",
+    "        if len(ids)>-1:\n",
+    "            for msg_id in ids:\n",
+    "                list_ids.append(msg_id['id'])\n",
+    "            return(list_ids)\n",
+    "\n",
+    "        else:\n",
+    "            list_ids.append(ids['id'])\n",
+    "            return list_ids\n",
+    "        \n",
+    "    except (errors.HttpError):\n",
+    "        print(\"An error occured: \")\n",
+    "\n",
+    "\n",
+    "def get_service():\n",
+    "    \"\"\"Shows basic usage of the Gmail API.\n",
+    "    Lists the user's Gmail labels.\n",
+    "    \"\"\"\n",
+    "    creds = None\n",
+    "    # The file token.json stores the user's access and refresh tokens, and is\n",
+    "    # created automatically when the authorization flow completes for the first\n",
+    "    # time.\n",
+    "    if os.path.exists('token.json'):\n",
+    "        creds = Credentials.from_authorized_user_file('token.json', SCOPES)\n",
+    "    # If there are no (valid) credentials available, let the user log in.\n",
+    "    if not creds or not creds.valid:\n",
+    "        if creds and creds.expired and creds.refresh_token:\n",
+    "            creds.refresh(Request())\n",
+    "        else:\n",
+    "            flow = InstalledAppFlow.from_client_secrets_file(\n",
+    "                'credentials.json', SCOPES)\n",
+    "            creds = flow.run_local_server(port=0)\n",
+    "        # Save the credentials for the next run\n",
+    "        with open('token.json', 'w') as token:\n",
+    "            token.write(creds.to_json())\n",
+    "\n",
+    "    service = build('gmail', 'v1', credentials=creds)\n",
+    "\n",
+    "    return service\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def print_receipts(service):\n",
+    "    messages = search_message(service)\n",
+    "    print(messages)\n",
+    "\n",
+    "    for i in messages:\n",
+    "\n",
+    "        message = get_message(service, i)\n",
+    "        chart = HTML(message)\n",
+    "\n",
+    "        #print(message)\n",
+    "\n",
+    "        message = bytes(message, 'ascii')\n",
+    "\n",
+    "        OutputFile = BytesIO()\n",
+    "        InputFile = BytesIO(message)\n",
+    "        quopri.decode(InputFile, OutputFile)\n",
+    "        output = OutputFile.getvalue()\n",
+    "\n",
+    "        #print(output.decode('utf-8'))\n",
+    "\n",
+    "        #display(chart)\n",
+    "\n",
+    "\n",
+    "        Func = open(\"GFG-1.html\",\"w\",encoding=\"utf-8\")\n",
+    "        Func.write(output.decode('utf-8'))\n",
+    "        Func.close()\n",
+    "\n",
+    "        path = r'C:\\Program Files (x86)\\wkhtmltopdf\\bin\\wkhtmltoimage.exe'\n",
+    "        config = imgkit.config(wkhtmltoimage=path)\n",
+    "        imgkit.from_file(\"GFG-1.html\", 'out.jpg', config=config)\n",
+    "\n",
+    "\n",
+    "        '''\n",
+    "        path_wkhtmltopdf = r'C:\\Program Files (x86)\\wkhtmltopdf\\bin\\wkhtmltopdf.exe'\n",
+    "        config = imgkit.configuration(wkhtmltopdf=path_wkhtmltopdf)\n",
+    "        imgkit.from_file(\"GFG-1.html\", \"out.pdf\", configuration=config)\n",
+    "        '''\n",
+    "\n",
+    "        image = Image.open(\"out.jpg\")\n",
+    "        w, h = image.size\n",
+    "        image = image.crop((0, 0, w, h))\n",
+    "        image = image.resize((w + 350, h + 450))\n",
+    "        image.save(\"out.jpg\")\n",
+    "        #w = img.EscposImage(\"out.jpg\").width\n",
+    "        #img.EscposImage(\"out.jpg\").center(max_width=w)\n",
+    "        #img.EscposImage(\"out.jpg\").to_raster_format()\n",
+    "        p.image(\"out.jpg\")\n",
+    "        p.cut()\n",
+    "        print(\"File Printed\")\n",
+    "        unstar_message(service, i)\n",
+    "              \n",
+    "\n",
+    "#p.cut()\n",
+    "\n",
+    "\n",
+    "service = get_service()\n",
+    "\n",
+    "while True == True:\n",
+    "    print_receipts(service)\n",
+    "    time.sleep(3)"
    ]
   }
  ],
